# deploy-django

./: .gitignore  Makefile  README.md  commands.py  manage.py  manage.sh  pyproject.toml
agent/: deploy_cast_hosting.sh  foo.py  main.py  pyproject.toml
agent/tests/: test_deploy_agent.py
deploy_django/: admin.py  app_settings.py  deploy_base.py  example_deployment.py  models.py  urls.py  views.py
deploy_django/management/commands/: deploy.py  deploy_results.py
deploy_django/migrations/: 0001_initial.py  0002_auto_20201121_1428.py  0003_auto_20201121_1516.py
deploy_django_project/: asgi.py  urls.py  wsgi.py
deploy_django_project/settings/: base.py  local.py
deploy_django_project/tests/: test_admin.py  test_challange_response.py  test_lint.py  test_project_setup.py
src/deploy_django/: apps.py
src/deploy_django_project/: asgi.py  urls.py  wsgi.py
src/deploy_django_project/settings/: base.py  tests.py
